[project]
name = "codedueprocess"
version = "0.1.0"
description = "An autonomous multi-agent swarm that acts as a digital courtroom to forensically audit, debate, and govern AI-generated codebases using LangGraph."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-core>=0.3.36",
    "langchain-google-genai>=4.2.1",
    "langchain-litellm>=0.5.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "langsmith>=0.3.11",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codedueprocess"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "I",    # isort
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.12",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
